--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="https://github.com/Kamalmishra12"><i class='bx bxl-github'></i></a>
                 <a href="add ur instgram url"><i class='bx bxl-instagram-alt' ></i></a>
             </div>
-            <a href="kamal Resume (2).pdf" target="Resume button" download class="btn">Download Resume</a>
+            <a href="Kamal-Mishra-Resume.pdf" target="Resume button" download class="btn">Download Resume</a>
 
         </div>
         <div class="home-img">
